Spacing Issues in Article Fixed

--- a/styles/styled_components/_articleStyling.scss
+++ b/styles/styled_components/_articleStyling.scss
@@ -5,7 +5,7 @@
 		font-weight: 400;
 	}
 	.image-feature-wrapper {
-		margin: 5rem 0rem 10rem 0rem;
+		margin: 5rem 0rem 3rem 0rem;
 	}
 	.article-feature-image {
 		margin: auto;
